test/ui/tests/name-resolution/duplicate-bindings.stderr
error[E020]: `Alpha` is defined multiple times in this scope
 --> ${TEST_FOLDER}/name-resolution/duplicate-bindings.lushui:5:6
  |
5 | data Alpha: Type of
  |      ^^^^^ conflicting definition
  |
 --> ${TEST_FOLDER}/name-resolution/duplicate-bindings.lushui:8:1
  |
8 | Alpha: Type = Type
  | ^^^^^ conflicting definition
  |

error[E020]: `beta` is defined multiple times in this scope
  --> ${TEST_FOLDER}/name-resolution/duplicate-bindings.lushui:10:1
   |
10 | beta: Nat = 1000
   | ^^^^ conflicting definition
   |
  --> ${TEST_FOLDER}/name-resolution/duplicate-bindings.lushui:19:1
   |
19 | beta (x: Nat) (y: Nat): Nat = y
   | ^^^^ conflicting definition
   |

error[E020]: `pod` is defined multiple times in this scope
  --> ${TEST_FOLDER}/name-resolution/duplicate-bindings.lushui:12:8
   |
12 | module pod of
   |        ^^^ conflicting definition
   |
  --> ${TEST_FOLDER}/name-resolution/duplicate-bindings.lushui:21:1
   |
21 | pod: Nat = beta
   | ^^^ conflicting definition
   |

error[E020]: `Nat` is defined multiple times in this scope
  --> ${TEST_FOLDER}/name-resolution/duplicate-bindings.lushui:13:15
   |
13 |     use super.Nat
   |               ^^^ conflicting definition
   |
  --> ${TEST_FOLDER}/name-resolution/duplicate-bindings.lushui:15:10
   |
15 |     data Nat: Type of
   |          ^^^ conflicting definition
   |

error[E020]: `zero` is defined multiple times in this scope
  --> ${TEST_FOLDER}/name-resolution/duplicate-bindings.lushui:26:1
   |
26 | zero: Nat = 0
   | ^^^^ conflicting definition
   |
  --> ${TEST_FOLDER}/name-resolution/duplicate-bindings.lushui:28:9
   |
28 | use pod.zero
   |         ^^^^ conflicting definition
   |

error: aborting due to 5 previous errors
 note: the error E020 has a detailed explanation
 help: run `lushui explain E020` to view it

